Update tracker with the new open new boosters functionality. If players already have a huge collection for the set, they can pseudo-randomly generate boosters for sealed format. Pseudo random can be a custom seed (in order to be reproducible) or the current timestamp (this is the default option if no custom seed is filled).With flag --set it's possible to specify a Set for wildcard picking.

--- a/webserver/style.css
+++ b/webserver/style.css
@@ -13,8 +13,8 @@ body {
   text-align: center;
 }
 
-.commentForm {
-  margin-top: 60px;
+.tracking-form {
+  margin-top: 40px;
 }
 
 .tracking-submit {
@@ -71,11 +71,19 @@ body {
   margin-top: 20px;
 }
 
-.log-input {
+.log-input, .seed-text {
   float: left;
   width: auto !important;
   height: 100% !important;
   border-radius: 0.5rem !important;
+}
+
+.seed-text {
+  margin-top: 4px;
+}
+
+.second-block {
+  margin-top: 60px;
 }
 
 pre {
@@ -119,3 +127,4 @@ pre {
   visibility: visible;
   opacity: 1;
 }
+
